LRP-4991 set JAVA_OPTS dynamically